--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,4 +25,5 @@ serde_json = "1"
 bollard = "0.19.4"
 tokio = { version = "1.48.0", features = ["full"] }
 futures-util = "0.3.31"
+sysinfo = "0.37.2"
 
